--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,11 +20,12 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
+
 dependencies:
   flutter:
     sdk: flutter
-
-
+  google_sign_in: ^4.5.3 # new
+  firebase_auth: ^1.0.0 # new
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
